--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Plain Website</title>
+    <title>My Awesome Website</title>
 </head>
 <body>
-    <h1>Welcome to My Plain Website!</h1>
-    <p>This is just a simple website with nothing on it but a heading.</p>
+    <h1>Welcome to My Awesome Website!</h1>
+    <p>This website now has an image and updated text!</p>
+
+    <!-- Add an image -->
+    <img src="Documents/my-image.jpg" alt="A cool image" width="300">
+
 </body>
 </html>
