--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>This website now has an image and updated text!</p>
 
     <!-- Add an image -->
-    <img src="Documents/my-image.jpg" alt="A cool image" width="300">
+    <img src="my-image.jpg" alt="A cool image" width="300">
 
 </body>
 </html>
