--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Awesome Website</title>
+    <style>
+        /* Center the image */
+        body {
+            display: flex;
+            justify-content: center; /* Horizontally center the image */
+            align-items: center; /* Vertically center the image */
+            height: 100vh; /* Make the body take the full viewport height */
+            margin: 0; /* Remove default margin */
+        }
+
+        img {
+            width: 300px; /* You can adjust the width here */
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My Awesome Website!</h1>
-    <p>This website now has an image and updated text!</p>
-
     <!-- Add an image -->
-    <img src="my-image.jpg" alt="A cool image" width="300">
-
+    <img src="my-image.jpg" alt="A cool image">
 </body>
 </html>
