--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Awesome Website</title>
+  <title>bigballs</title>
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet"> <!-- Dancing Script Font Link -->
   <style>
     /* Ensure the page fills the viewport and removes default margins */
@@ -77,7 +77,7 @@
 </head>
 <body>
   <!-- Video background element -->
-  <video id="bgVideo" autoplay loop muted playsinline>
+  <video id="bgVideo" autoplay loop playsinline>
     <source src="my-video.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
