--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </head>
 <body>
   <!-- Video background element -->
-  <video id="bgVideo" autoplay loop playsinline>
+  <video id="bgVideo" autoplay loop muted playsinline>
     <source src="my-video.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
