--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <body>
   <!-- Video background element -->
   <video id="bgVideo" autoplay loop playsinline>
-    <source src="my-video.mp4" type="video/mp4">
+    <source src="Documents/my-video.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
