--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 </head>
 <body>
   <!-- Video background element -->
-  <video id="bgVideo" autoplay loop playsinline>
-    <source src="Documents/my-video.mp4" type="video/mp4">
+  <video id="bgVideo" autoplay loop muted playsinline>
+    <source src="my-video.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
