--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
       transition: all 0.5s ease;
       width: 100px;  /* Initial size of the image */
       opacity: 0;    /* Initially hidden */
+      z-index: 1;    /* Ensure image stays above background */
     }
 
     /* Example content styling (adjust as needed) */
     .content {
       position: relative;
-      z-index: 1;  /* Content appears above the video */
+      z-index: 2;  /* Content appears above the video */
     }
 
     /* Custom text styles */
@@ -64,7 +65,7 @@
       bottom: 10px;
       width: 100%;
       text-align: center;
-      z-index: 1;
+      z-index: 2;
     }
 
     footer p {
@@ -76,17 +77,11 @@
   </style>
 </head>
 <body>
-  <!-- Video background element -->
+  <!-- Video background element with audio -->
   <video id="bgVideo" autoplay loop muted playsinline>
     <source src="my-video.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
-
-  <!-- Audio element (if you have separate audio) -->
-  <audio id="bgAudio" autoplay loop>
-    <source src="my-audio.mp3" type="audio/mp3">
-    Your browser does not support the audio tag.
-  </audio>
 
   <!-- Image element -->
   <img src="my-image.jpg" alt="A cool image" id="animatedImage" />
@@ -134,3 +129,4 @@
   </script>
 </body>
 </html>
+
