--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
   <!-- Image elements -->
   <img src="my-image.jpg" alt="First Image" id="animatedImage1" />
-  <img src="photo2.jpg" alt="Second Image" id="animatedImage2" style="display: none;" />
+  <img src="image2.jpg" alt="Second Image" id="animatedImage2" style="display: none;" />
 
   <!-- Content goes here -->
   <div class="content">
