--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>bigballs</title>
-  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet"> <!-- Dancing Script Font Link -->
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
   <style>
     /* Ensure the page fills the viewport and removes default margins */
     html, body {
@@ -22,41 +22,29 @@
       left: 0;
       width: 100%;
       height: 100%;
-      object-fit: cover;  /* Ensures the video covers the area */
-      z-index: -1;        /* Puts the video behind all other content */
+      object-fit: cover; 
+      z-index: -1;        
     }
 
     /* Image style, initial opacity and transition for fading */
     img {
       position: absolute;
       transition: all 0.5s ease;
-      width: 100px;  /* Initial size of the image */
-      opacity: 0;    /* Initially hidden */
+      width: 100px;  
+      opacity: 0;    
     }
 
-    /* Example content styling (adjust as needed) */
+    /* Example content styling */
     .content {
       position: relative;
-      z-index: 1;  /* Content appears above the video */
+      z-index: 1;  
     }
 
     /* Custom text styles */
-    h1 {
-      color: black;  /* Changed to black */
+    h1, h2 {
       text-align: center;
-      padding-top: 20px;
-      font-family: 'Dancing Script', cursive; /* Using Dancing Script font */
-      font-weight: 400; /* Thin weight */
-      font-size: 2rem; /* Adjusted size */
-    }
-
-    h2 {
-      color: black;  /* Color for the smaller sentence */
-      text-align: center;
-      font-family: 'Dancing Script', cursive; /* Using Dancing Script font */
-      font-weight: 400; /* Thin weight */
-      font-size: 1.5rem; /* Slightly larger than the previous size */
-      margin-top: 10px;  /* Space between the header and the smaller sentence */
+      font-family: 'Dancing Script', cursive;
+      color: black; 
     }
 
     footer {
@@ -68,10 +56,9 @@
     }
 
     footer p {
-      color: black;  /* Changed to black */
-      font-family: 'Dancing Script', cursive; /* Using Dancing Script font */
-      font-weight: 400; /* Thin weight */
-      font-size: 1.5rem; /* Slightly larger than before */
+      color: black;
+      font-family: 'Dancing Script', cursive;
+      font-size: 1.5rem;
     }
   </style>
 </head>
@@ -112,59 +99,4 @@
   <script>
     const img1 = document.getElementById('animatedImage1');
     const img2 = document.getElementById('animatedImage2');
-    const video = document.getElementById('bgVideo');
-    const audio = document.getElementById('bgAudio');
-    const fartAudio = document.getElementById('fartAudio');
-
-    let isImage1Visible = true;  // Flag to track which image is visible
-
-    // Function to start audio after user interaction
-    document.addEventListener('click', function(event) {
-      // Unmute the video when clicked
-      video.muted = false;
-
-      // Play the background audio
-      audio.play();
-
-      // Play the fart sound on click
-      fartAudio.play();
-
-      // Get the position of the mouse click
-      const x = event.clientX;
-      const y = event.clientY;
-
-      // Set the image position to the mouse click
-      if (isImage1Visible) {
-        img1.style.left = `${x - img1.width / 2}px`;
-        img1.style.top = `${y - img1.height / 2}px`;
-      } else {
-        img2.style.left = `${x - img2.width / 2}px`;
-        img2.style.top = `${y - img2.height / 2}px`;
-      }
-
-      // Toggle images on each click
-      if (isImage1Visible) {
-        img1.style.opacity = '1'; // Make the first image visible
-        img2.style.opacity = '0'; // Hide the second image
-        setTimeout(() => {
-          img1.style.width = '250px'; // Enlarge the first image
-        }, 10);
-        setTimeout(() => {
-          img1.style.opacity = '0'; // Fade out the first image
-        }, 1000);
-        isImage1Visible = false; // Switch to the second image next
-      } else {
-        img2.style.opacity = '1'; // Make the second image visible
-        img1.style.opacity = '0'; // Hide the first image
-        setTimeout(() => {
-          img2.style.width = '250px'; // Enlarge the second image
-        }, 10);
-        setTimeout(() => {
-          img2.style.opacity = '0'; // Fade out the second image
-        }, 1000);
-        isImage1Visible = true; // Switch back to the first image
-      }
-    });
-  </script>
-</body>
-</html>
+    const video = document.get
