--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
   <!-- Image elements -->
   <img src="my-image.jpg" alt="First Image" id="animatedImage1" />
-  <img src="image2.jpg" alt="Second Image" id="animatedImage2" style="display: none;" />
+  <img src="image2.jpg" alt="Second Image" id="animatedImage2" />
 
   <!-- Content goes here -->
   <div class="content">
