--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>bigballs</title>
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    /* Ensure the page fills the viewport and removes default margins */
     html, body {
       margin: 0;
       padding: 0;
@@ -23,24 +22,21 @@
       width: 100%;
       height: 100%;
       object-fit: cover; 
-      z-index: -1;        
+      z-index: -1;
     }
 
-    /* Image style, initial opacity and transition for fading */
+    /* Image styles */
     img {
       position: absolute;
-      transition: all 0.5s ease;
       width: 100px;  
-      opacity: 0;    
+      display: none;   /* Start with images hidden */
     }
 
-    /* Example content styling */
     .content {
       position: relative;
-      z-index: 1;  
+      z-index: 1;
     }
 
-    /* Custom text styles */
     h1, h2 {
       text-align: center;
       font-family: 'Dancing Script', cursive;
@@ -63,40 +59,60 @@
   </style>
 </head>
 <body>
-  <!-- Video background element -->
   <video id="bgVideo" autoplay loop muted playsinline>
     <source src="my-video.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
-  <!-- Audio element (if you have separate audio) -->
-  <audio id="bgAudio" loop>
-    <source src="my-audio.mp3" type="audio/mp3">
-    Your browser does not support the audio tag.
-  </audio>
-
-  <!-- Fart Audio element -->
   <audio id="fartAudio">
     <source src="fart-sound.mp3" type="audio/mp3">
     Your browser does not support the audio tag.
   </audio>
 
   <!-- Image elements -->
-  <img src="my-image.jpg" alt="First Image" id="animatedImage1" />
-  <img src="image2.jpg" alt="Second Image" id="animatedImage2" />
+  <img src="my-image.jpg" alt="First Image" id="image1" />
+  <img src="image2.jpg" alt="Second Image" id="image2" />
 
-  <!-- Content goes here -->
   <div class="content">
     <h1>Welcome to my ts pmo pmo website bru💔💔</h1>
     <h2>Click for a surprise bru</h2>
   </div>
 
-  <!-- Website Link -->
   <footer>
     <p>Like if you gooned💔💔</p>
   </footer>
 
   <script>
-    const img1 = document.getElementById('animatedImage1');
-    const img2 = document.getElementById('animatedImage2');
-    const video = document.get
+    const img1 = document.getElementById('image1');
+    const img2 = document.getElementById('image2');
+    const video = document.getElementById('bgVideo');
+    const fartAudio = document.getElementById('fartAudio');
+
+    let isImage1Visible = true;
+
+    document.addEventListener('click', function(event) {
+      fartAudio.play(); // Play fart sound on click
+      video.muted = false; // Unmute video
+
+      // Get mouse click position
+      const x = event.clientX;
+      const y = event.clientY;
+
+      // Set the position of the images at the click point
+      if (isImage1Visible) {
+        img1.style.left = `${x - img1.width / 2}px`;
+        img1.style.top = `${y - img1.height / 2}px`;
+        img1.style.display = 'block';  // Show the first image
+        img2.style.display = 'none';   // Hide the second image
+        isImage1Visible = false; // Switch to image2 next click
+      } else {
+        img2.style.left = `${x - img2.width / 2}px`;
+        img2.style.top = `${y - img2.height / 2}px`;
+        img2.style.display = 'block';  // Show the second image
+        img1.style.display = 'none';   // Hide the first image
+        isImage1Visible = true; // Switch to image1 next click
+      }
+    });
+  </script>
+</body>
+</html>
