--- a/index.html
+++ b/index.html
@@ -3,114 +3,48 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>bigballs</title>
-  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
+  <title>Image Toggle Test</title>
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      width: 100%;
       height: 100%;
       overflow: hidden;
     }
 
-    /* Video background styles */
-    #bgVideo {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover; 
-      z-index: -1;
-    }
-
-    /* Image styles */
     img {
       position: absolute;
       width: 100px;  
       display: none;   /* Start with images hidden */
     }
-
-    .content {
-      position: relative;
-      z-index: 1;
-    }
-
-    h1, h2 {
-      text-align: center;
-      font-family: 'Dancing Script', cursive;
-      color: black; 
-    }
-
-    footer {
-      position: absolute;
-      bottom: 10px;
-      width: 100%;
-      text-align: center;
-      z-index: 1;
-    }
-
-    footer p {
-      color: black;
-      font-family: 'Dancing Script', cursive;
-      font-size: 1.5rem;
-    }
   </style>
 </head>
 <body>
-  <video id="bgVideo" autoplay loop muted playsinline>
-    <source src="my-video.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
-
-  <audio id="fartAudio">
-    <source src="fart-sound.mp3" type="audio/mp3">
-    Your browser does not support the audio tag.
-  </audio>
-
   <!-- Image elements -->
   <img src="my-image.jpg" alt="First Image" id="image1" />
   <img src="image2.jpg" alt="Second Image" id="image2" />
 
-  <div class="content">
-    <h1>Welcome to my ts pmo pmo website bru💔💔</h1>
-    <h2>Click for a surprise bru</h2>
-  </div>
-
-  <footer>
-    <p>Like if you gooned💔💔</p>
-  </footer>
-
   <script>
     const img1 = document.getElementById('image1');
     const img2 = document.getElementById('image2');
-    const video = document.getElementById('bgVideo');
-    const fartAudio = document.getElementById('fartAudio');
-
     let isImage1Visible = true;
 
     document.addEventListener('click', function(event) {
-      fartAudio.play(); // Play fart sound on click
-      video.muted = false; // Unmute video
-
-      // Get mouse click position
       const x = event.clientX;
       const y = event.clientY;
 
-      // Set the position of the images at the click point
       if (isImage1Visible) {
         img1.style.left = `${x - img1.width / 2}px`;
         img1.style.top = `${y - img1.height / 2}px`;
         img1.style.display = 'block';  // Show the first image
         img2.style.display = 'none';   // Hide the second image
-        isImage1Visible = false; // Switch to image2 next click
+        isImage1Visible = false;
       } else {
         img2.style.left = `${x - img2.width / 2}px`;
         img2.style.top = `${y - img2.height / 2}px`;
         img2.style.display = 'block';  // Show the second image
         img1.style.display = 'none';   // Hide the first image
-        isImage1Visible = true; // Switch to image1 next click
+        isImage1Visible = true;
       }
     });
   </script>
