--- a/index.html
+++ b/index.html
@@ -3,49 +3,154 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Image Toggle Test</title>
+  <title>bigballs</title>
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet"> <!-- Dancing Script Font Link -->
   <style>
+    /* Ensure the page fills the viewport and removes default margins */
     html, body {
       margin: 0;
       padding: 0;
+      width: 100%;
       height: 100%;
       overflow: hidden;
     }
 
+    /* Video background styles */
+    #bgVideo {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;  /* Ensures the video covers the area */
+      z-index: -1;        /* Puts the video behind all other content */
+    }
+
+    /* Image style, initial opacity and transition for fading */
     img {
       position: absolute;
-      width: 100px;  
-      display: none;   /* Start with images hidden */
+      transition: all 0.5s ease;
+      width: 100px;  /* Initial size of the image */
+      opacity: 0;    /* Initially hidden */
+    }
+
+    /* Example content styling (adjust as needed) */
+    .content {
+      position: relative;
+      z-index: 1;  /* Content appears above the video */
+    }
+
+    /* Custom text styles */
+    h1 {
+      color: black;  /* Changed to black */
+      text-align: center;
+      padding-top: 20px;
+      font-family: 'Dancing Script', cursive; /* Using Dancing Script font */
+      font-weight: 400; /* Thin weight */
+      font-size: 2rem; /* Adjusted size */
+    }
+
+    h2 {
+      color: black;  /* Color for the smaller sentence */
+      text-align: center;
+      font-family: 'Dancing Script', cursive; /* Using Dancing Script font */
+      font-weight: 400; /* Thin weight */
+      font-size: 1.5rem; /* Slightly larger than the previous size */
+      margin-top: 10px;  /* Space between the header and the smaller sentence */
+    }
+
+    footer {
+      position: absolute;
+      bottom: 10px;
+      width: 100%;
+      text-align: center;
+      z-index: 1;
+    }
+
+    footer p {
+      color: black;  /* Changed to black */
+      font-family: 'Dancing Script', cursive; /* Using Dancing Script font */
+      font-weight: 400; /* Thin weight */
+      font-size: 1.5rem; /* Slightly larger than before */
     }
   </style>
 </head>
 <body>
+  <!-- Video background element -->
+  <video id="bgVideo" autoplay loop muted playsinline>
+    <source src="my-video.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+
+  <!-- Audio element (if you have separate audio) -->
+  <audio id="bgAudio" loop>
+    <source src="my-audio.mp3" type="audio/mp3">
+    Your browser does not support the audio tag.
+  </audio>
+
+  <!-- Fart audio element -->
+  <audio id="fartAudio">
+    <source src="fart.mp3" type="audio/mp3">
+    Your browser does not support the audio tag.
+  </audio>
+
   <!-- Image elements -->
-  <img src="my-image.jpg" alt="First Image" id="image1" />
-  <img src="image2.jpg" alt="Second Image" id="image2" />
+  <img src="image1.jpg" alt="Image 1" id="image1" />
+  <img src="image2.jpg" alt="Image 2" id="image2" />
+
+  <!-- Content goes here -->
+  <div class="content">
+    <h1>Welcome to my website</h1>
+    <h2>Click for a surprise</h2>
+  </div>
+
+  <!-- Website Link -->
+  <footer>
+    <p>Like if you gooned!</p>
+  </footer>
 
   <script>
     const img1 = document.getElementById('image1');
     const img2 = document.getElementById('image2');
-    let isImage1Visible = true;
+    const video = document.getElementById('bgVideo');
+    const audio = document.getElementById('bgAudio');
+    const fartAudio = document.getElementById('fartAudio');
 
+    let clickCount = 0;
+
+    // Function to play audio and switch images on click
     document.addEventListener('click', function(event) {
+      // Play the background audio
+      audio.play();
+
+      // Play the fart sound
+      fartAudio.play();
+
+      // Unmute the video when clicked
+      video.muted = false;
+
+      // Toggle between the images
+      clickCount++;
+      if (clickCount % 2 === 0) {
+        img1.style.opacity = '1';
+        img2.style.opacity = '0';
+      } else {
+        img1.style.opacity = '0';
+        img2.style.opacity = '1';
+      }
+
+      // Set the image positions to the mouse click
       const x = event.clientX;
       const y = event.clientY;
 
-      if (isImage1Visible) {
-        img1.style.left = `${x - img1.width / 2}px`;
-        img1.style.top = `${y - img1.height / 2}px`;
-        img1.style.display = 'block';  // Show the first image
-        img2.style.display = 'none';   // Hide the second image
-        isImage1Visible = false;
-      } else {
-        img2.style.left = `${x - img2.width / 2}px`;
-        img2.style.top = `${y - img2.height / 2}px`;
-        img2.style.display = 'block';  // Show the second image
-        img1.style.display = 'none';   // Hide the first image
-        isImage1Visible = true;
-      }
+      img1.style.left = `${x - img1.width / 2}px`;
+      img1.style.top = `${y - img1.height / 2}px`;
+      img2.style.left = `${x - img2.width / 2}px`;
+      img2.style.top = `${y - img2.height / 2}px`;
+
+      // Fade-in the image
+      img1.style.opacity = '1';
+      img2.style.opacity = '1';
     });
   </script>
 </body>
