--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>bigballs</title>
-  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet"> <!-- Dancing Script Font Link -->
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    /* Ensure the page fills the viewport and removes default margins */
     html, body {
       margin: 0;
       padding: 0;
@@ -15,48 +14,44 @@
       overflow: hidden;
     }
 
-    /* Video background styles */
     #bgVideo {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      object-fit: cover;  /* Ensures the video covers the area */
-      z-index: -1;        /* Puts the video behind all other content */
+      object-fit: cover;
+      z-index: -1;
     }
 
-    /* Image style, initial opacity and transition for fading */
     img {
       position: absolute;
       transition: all 0.5s ease;
-      width: 100px;  /* Initial size of the image */
-      opacity: 0;    /* Initially hidden */
+      width: 100px;
+      opacity: 0; /* Initially hidden */
     }
 
-    /* Example content styling (adjust as needed) */
     .content {
       position: relative;
-      z-index: 1;  /* Content appears above the video */
+      z-index: 1;
     }
 
-    /* Custom text styles */
     h1 {
-      color: black;  /* Changed to black */
+      color: black;
       text-align: center;
       padding-top: 20px;
-      font-family: 'Dancing Script', cursive; /* Using Dancing Script font */
-      font-weight: 400; /* Thin weight */
-      font-size: 2rem; /* Adjusted size */
+      font-family: 'Dancing Script', cursive;
+      font-weight: 400;
+      font-size: 2rem;
     }
 
     h2 {
-      color: black;  /* Color for the smaller sentence */
+      color: black;
       text-align: center;
-      font-family: 'Dancing Script', cursive; /* Using Dancing Script font */
-      font-weight: 400; /* Thin weight */
-      font-size: 1.5rem; /* Slightly larger than the previous size */
-      margin-top: 10px;  /* Space between the header and the smaller sentence */
+      font-family: 'Dancing Script', cursive;
+      font-weight: 400;
+      font-size: 1.5rem;
+      margin-top: 10px;
     }
 
     footer {
@@ -68,43 +63,38 @@
     }
 
     footer p {
-      color: black;  /* Changed to black */
-      font-family: 'Dancing Script', cursive; /* Using Dancing Script font */
-      font-weight: 400; /* Thin weight */
-      font-size: 1.5rem; /* Slightly larger than before */
+      color: black;
+      font-family: 'Dancing Script', cursive;
+      font-weight: 400;
+      font-size: 1.5rem;
     }
   </style>
 </head>
 <body>
-  <!-- Video background element -->
   <video id="bgVideo" autoplay loop muted playsinline>
     <source src="my-video.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
-  <!-- Audio element (if you have separate audio) -->
   <audio id="bgAudio" loop>
     <source src="my-audio.mp3" type="audio/mp3">
     Your browser does not support the audio tag.
   </audio>
 
-  <!-- Fart Audio element -->
   <audio id="fartAudio">
     <source src="fart-sound.mp3" type="audio/mp3">
     Your browser does not support the audio tag.
   </audio>
 
-  <!-- Image elements -->
+  <!-- Images -->
   <img src="my-image.jpg" alt="First Image" id="animatedImage1" />
   <img src="image2.jpg" alt="Second Image" id="animatedImage2" style="display: none;" />
 
-  <!-- Content goes here -->
   <div class="content">
     <h1>Welcome to my ts pmo pmo website bru💔💔</h1>
     <h2>Click for a surprise bru</h2>
   </div>
 
-  <!-- Website Link -->
   <footer>
     <p>Like if you gooned💔💔</p>
   </footer>
@@ -118,7 +108,6 @@
 
     let isImage1Visible = true;  // Flag to track which image is visible
 
-    // Function to start audio after user interaction
     document.addEventListener('click', function(event) {
       // Unmute the video when clicked
       video.muted = false;
